# harness-axenya

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.worker  README.md  SPEC.md  alembic.ini  docker-compose.dev.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
agents/: README.md  _schema.json  exemplo_eco.yaml  triagem_lead.yaml
agents/queries/: similar_leads.yaml
dashboard/: app.py
docs/: PLATFORM_SCOPE.md  PRD.md  SPEC_BLOCK_A_IDENTITY.md  SPEC_BLOCK_D_KANBAN.md  SPEC_PLANNER.md  runbook.md
infra/: cloudbuild.yaml
infra/terraform/: .gitignore  README.md  alerts.tf  artifact_registry.tf  cloud_run_api.tf  cloud_run_worker.tf  cloudsql.tf  iam.tf  main.tf  metric_descriptors.tf  outputs.tf  redis.tf  secrets.tf  terraform.tfvars.example  variables.tf
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_processes.py
scripts/: processes_tick.py  seed_dev.py  seed_processes.py  trigger_webhook.py
src/xenia/: __init__.py  celery_app.py  config.py
src/xenia/agents/: definition.py  graph_builder.py  registry.py
src/xenia/api/: deps.py  main.py  schemas.py
src/xenia/executor/: dispatch.py  executor.py  retry.py  tasks.py
src/xenia/llm/: anthropic_client.py  client.py  omnirouter_client.py
src/xenia/observability/: langfuse_tracer.py  metrics.py
src/xenia/processes/: __init__.py  repository.py  scheduler.py
src/xenia/security/: hmac_verify.py  jwt_auth.py  secrets.py
src/xenia/skills/: README.md  __init__.py  base.py  bigquery.py  hubspot.py  jira.py  ksenia.py  mcp_skill.py  slack.py
src/xenia/storage/: db.py  models.py  repositories.py
tests/: conftest.py
tests/integration/: test_run_persistence.py  test_webhook_flow.py
tests/unit/: test_dispatch.py  test_executor.py  test_graph_builder.py  test_hmac.py  test_jwt.py  test_observability.py  test_phase3_skills.py  test_processes_scheduler.py  test_registry.py  test_secrets.py  test_skills.py
web/: next.config.ts  package.json  pnpm-lock.yaml
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: coming-soon.tsx  page-header.tsx  (+2 more)
(+34 files in other folders)
