[project]
name = "xenia-harness"
version = "0.1.0"
description = "Xenia Harness — cloud-native runtime for autonomous agents at Axenya"
authors = [
    { name = "Sophia Lapadula" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14",
    "asyncpg>=0.30",
    "psycopg[binary]>=3.2",
    "redis>=5.2",
    "celery>=5.4",
    "anthropic>=0.40",
    "httpx>=0.28",
    "pyyaml>=6.0.2",
    "jsonschema>=4.23",
    "bcrypt>=4.2",
    "pyjwt>=2.10",
    "python-multipart>=0.0.18",
    "structlog>=24.4",
    "langgraph>=0.2.50",
    "langgraph-checkpoint-postgres>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.28",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-pyyaml",
    "freezegun>=1.5",
]
dashboard = [
    "streamlit>=1.40",
    "pandas>=2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xenia"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "N"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["celery.*", "jsonschema.*", "anthropic.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["langgraph.*"]
follow_imports = "skip"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: integration tests requiring postgres + redis",
]

[tool.coverage.run]
source = ["src/xenia"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
